--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,4 +1,4 @@
 
 	<footer>
-		<p> Created by Paul Jones Copyright {{getCurrentYear}} </p>
+		<p> Created by DJF Copyright {{getCurrentYear}} </p>
 	</footer>
